--- a/read_comics/templates/account/password_reset.html
+++ b/read_comics/templates/account/password_reset.html
@@ -8,7 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
   <meta name="author" content="NoNameItem">
   <title>Restore Password</title>
-  <script src="https://kit.fontawesome.com/96ea38b6db.js" crossorigin="anonymous"></script>
+  {#  <script src="https://kit.fontawesome.com/96ea38b6db.js" crossorigin="anonymous"></script>#}
+  <link rel="stylesheet" type="text/css" href="{% static "fontawesome/css/fontawesome.min.css" %}">
+  <link rel="stylesheet" type="text/css" href="{% static "fontawesome/css/brands.min.css" %}">
+  <link rel="stylesheet" type="text/css" href="{% static "fontawesome/css/duotone.min.css" %}">
   <link rel="shortcut icon" type="image/x-icon" href="{% static "images/favicons/favicon.png" %}">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600%7CIBM+Plex+Sans:300,400,500,600,700"
         rel="stylesheet">
