fix: Finished marks in story arc and volume cards

--- a/read_comics/issues/templates/issues/detail.html
+++ b/read_comics/issues/templates/issues/detail.html
@@ -35,7 +35,7 @@
                   <h6 class="detail-header-text-color">{{ issue.name|default_if_none:'' }}</h6>
               </div>
               <div id="finished-mark" {% if not finished %}style="display: none" {% endif %}>
-                <i class="far fa-check-circle success fa-3x"></i>
+                <i class="fad fa-check-circle success fa-3x"></i>
               </div>
             </div>
             <!-- detail nav tabs start -->
