--- a/read_comics/issues/templates/issues/list.html
+++ b/read_comics/issues/templates/issues/list.html
@@ -94,7 +94,7 @@
             {% endif %}
             {% if issue.finished_flg %}
               <div class="finished-mark">
-                <i class="far fa-check-circle success fa-3x"></i>
+                <i class="fad fa-check-circle success fa-3x"></i>
               </div>
             {% endif %}
           </div>
