--- a/read_comics/volumes/templates/volumes/list.html
+++ b/read_comics/volumes/templates/volumes/list.html
@@ -91,7 +91,7 @@
             {% endif %}
             {% if volume.finished_count == volume.issue_count %}
               <div class="finished-mark">
-                <i class="far fa-check-circle success fa-3x"></i>
+                <i class="fad fa-check-circle success fa-3x"></i>
               </div>
             {% endif %}
           </div>
