--- a/read_comics/story_arcs/templates/story_arcs/list.html
+++ b/read_comics/story_arcs/templates/story_arcs/list.html
@@ -80,7 +80,7 @@
             {% endif %}
             {% if story_arc.finished_count == story_arc.issue_count %}
               <div class="finished-mark">
-                <i class="far fa-check-circle success fa-3x"></i>
+                <i class="fad fa-check-circle success fa-3x"></i>
               </div>
             {% endif %}
           </div>
