--- a/read_comics/issues/templates/issues/blocks/download_button.html
+++ b/read_comics/issues/templates/issues/blocks/download_button.html
@@ -1,4 +1,4 @@
-{#{% if request.user.is_authenticated %}#}
+{% if request.user.is_authenticated %}
 <li class="nav-item pb-1">
   <div class="dropdown">
     <button class="btn btn-info d-flex nav-link dropdown-toggle" type="button" id="download-link" data-toggle="dropdown"
@@ -15,4 +15,4 @@
   {#      <i class="fad fa-download"></i> <span class="d-none d-md-block pl-50"> Download (~{{ issues_info.size|filesizeformat }})</span>#}
   {#    </a>#}
 </li>
-{#{% endif %}#}
+{% endif %}
