--- a/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
+++ b/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
@@ -29,6 +29,7 @@
 
 {% block page_css %}
   {{ block.super }}
+  <link rel="stylesheet" type="text/css" href="{% static "missing_issues/css/missing_issues.css" %}">
 {% endblock %}
 
 {% block page_content %}
