chg: added cover date to issue detail page head

--- a/read_comics/issues/templates/issues/detail.html
+++ b/read_comics/issues/templates/issues/detail.html
@@ -37,12 +37,17 @@
               <div id="finished-mark" {% if not finished %}style="display: none" {% endif %}>
                 <i class="fad fa-check-circle success fa-3x"></i>
               </div>
+              <div class="detail-header-cover-date d-none d-md-block">
+                <h6 class="detail-header-text-color font-italic">{{ issue.cover_date|default_if_none:'Cover date unknown' }}</h6>
+              </div>
             </div>
             <!-- detail nav tabs start -->
             <div class="card-body px-0">
               <div class="detail-body-text pr-md-2 d-block d-md-none">
-                <h4 class="mb-0 text-bold-500 detail-header-text-color">{{ issue.volume.name }} #{{ issue.number }}</h4>
-                <h6 class="detail-header-text-color">{{ issue.name }}</h6>
+                <h4 class="mb-0 text-bold-500 detail-header-text-color">{{ issue.volume.name }} #{{ issue.number }}
+                <small>(of {{ issue.volume.last_issue_number|default_if_none:"Unknown" }})</small></h4>
+                <h6 class="detail-header-text-color">{{ issue.name|default_if_none:"" }}</h6>
+                <h6 class="detail-header-text-color font-italic">{{ issue.cover_date|default_if_none:'Cover date unknown' }}</h6>
               </div>
 
               <div class="detail-short-description">
