ci(github-actions): github workflow for develop branch

--- a/read_comics/issues/templates/issues/blocks/download_button.html
+++ b/read_comics/issues/templates/issues/blocks/download_button.html
@@ -1,5 +1,5 @@
 {% if request.user.is_authenticated %}
-<li class="nav-item pb-1">
+<li class="nav-item pb-1"> {#   #}
   <div class="dropdown">
     <button class="btn btn-info d-flex nav-link dropdown-toggle" type="button" id="download-link" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
