--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -4,3 +4,7 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0px 1000px rgb(var(--v-theme-surface)) inset;
 }
+
+.layout-nav-type-vertical .layout-vertical-nav .nav-header .header-action {
+    margin-inline-end: 0;
+}
