--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -8,3 +8,12 @@ input:-webkit-autofill:active {
 .layout-nav-type-vertical .layout-vertical-nav .nav-header .header-action {
   margin-inline-end: 0;
 }
+
+.layout-nav-type-vertical .layout-vertical-nav .nav-group .nav-group .nav-item-icon,
+.layout-nav-type-vertical .layout-vertical-nav .nav-group .nav-link .nav-item-icon {
+  font-size: 1rem;
+}
+
+.nav-group-children {
+  padding-left: 1rem;
+}
