feat(characters): new characters detail page

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -17,3 +17,7 @@ input:-webkit-autofill:active {
 .nav-group-children {
   padding-left: 1rem;
 }
+
+.text-capitalize {
+  text-transform: capitalize !important;
+}
