feat(core): /metrics endpoint with mongo and db statistics

--- a/read_comics/templates/403.html
+++ b/read_comics/templates/403.html
@@ -57,7 +57,7 @@
                 <p>
                   You do not have permission to view this page.
                 </p>
-                <a href="{% url "pages:home" %}" class="btn btn-primary round glow mt-2">BACK TO HOME</a>
+                <a href="{% url "core:home" %}" class="btn btn-primary round glow mt-2">BACK TO HOME</a>
               </div>
             </div>
           </div>
