--- a/read_comics/templates/base.html
+++ b/read_comics/templates/base.html
@@ -88,7 +88,7 @@
               {% block breadcrumb %}
                 <li class="breadcrumb-item {% if not breadcrumb %}active{% endif %}">
                   {% if breadcrumb %}
-                    <a href="{% url "pages:home" %}"><i class="fad fa-home font-medium-2" aria-hidden="true"></i></a>
+                    <a href="{% url "core:home" %}"><i class="fad fa-home font-medium-2" aria-hidden="true"></i></a>
                   {% else %}
                     <i class="fad fa-home font-medium-2" aria-hidden="true"></i>
                   {% endif %}
