--- a/read_comics/templates/blocks/layout/header/header.html
+++ b/read_comics/templates/blocks/layout/header/header.html
@@ -13,7 +13,7 @@
           </ul>
           <ul class="nav navbar-nav bookmark-icons">
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="{% url "pages:home" %}" data-toggle="tooltip" data-placement="top" title="Home">
+              <a class="nav-link" href="{% url "core:home" %}" data-toggle="tooltip" data-placement="top" title="Home">
                 <i class="fad fa-home ficon"></i>
               </a>
             </li>
