--- a/read_comics/core/templates/core/home.html
+++ b/read_comics/core/templates/core/home.html
@@ -12,7 +12,7 @@
 
 {% block page_css %}
   {{ block.super }}
-  <link rel="stylesheet" type="text/css" href="{% static "pages/css/home.css" %}">
+  <link rel="stylesheet" type="text/css" href="{% static "core/css/home.css" %}">
 {% endblock %}
 
 {% block page_content %}
@@ -32,7 +32,7 @@
                   <h4 class="card-title"><a href="{% url "volumes:continue_reading" %}">Unfinished Volumes</a></h4>
                 </div>
                 <div class="card-body">
-                  {% include "pages/blocks/started_not_finished.html" with items=started_and_not_finished_volumes url_name="volumes:continue_reading" %}
+                  {% include "core/blocks/started_not_finished.html" with items=started_and_not_finished_volumes url_name="volumes:continue_reading" %}
                 </div>
               </div>
             </div>
@@ -43,7 +43,7 @@
                   <h4 class="card-title"><a href="{% url "story_arcs:continue_reading" %}">Unfinished Story Arcs</a></h4>
                 </div>
                 <div class="card-body">
-                  {% include "pages/blocks/started_not_finished.html" with items=started_and_not_finished_story_arcs url_name="story_arcs:continue_reading" %}
+                  {% include "core/blocks/started_not_finished.html" with items=started_and_not_finished_story_arcs url_name="story_arcs:continue_reading" %}
                 </div>
               </div>
             </div>
@@ -211,7 +211,7 @@
         <ul>
           {% for line in update_history %}
             <li><a
-              href="{% url "pages:new_issues" line.created_day.year line.created_day.month line.created_day.day %}"><strong>{{ line.created_day|date:"DATE_FORMAT" }}:</strong> {{ line.cnt|intcomma }}
+              href="{% url "core:new_issues" line.created_day.year line.created_day.month line.created_day.day %}"><strong>{{ line.created_day|date:"DATE_FORMAT" }}:</strong> {{ line.cnt|intcomma }}
               issue{{ line.cnt|pluralize }}</a></li>
           {% endfor %}
         </ul>
@@ -224,5 +224,5 @@
 {% block vendor_js %}
   {{ block.super }}
   <script type="text/javascript" src="{% static "slick/slick.min.js" %}"></script>
-  <script type="text/javascript" src="{% static "pages/js/home.js" %}"></script>
+  <script type="text/javascript" src="{% static "core/js/home.js" %}"></script>
 {% endblock %}
