--- a/read_comics/issues/templates/issues/detail.html
+++ b/read_comics/issues/templates/issues/detail.html
@@ -186,7 +186,7 @@
                 role="tablist">
                 {% if request.user.is_authenticated %}
                   <li class="nav-item pb-1">
-                    <a class="nav-link d-flex px-1 btn btn-info" id="download-link" rel="nofollow" href="{{ issue.download_link }}">
+                    <a class="nav-link d-flex px-1 btn btn-info" id="download-link" rel="nofollow" href="{% url 'issues:download' issue.slug %}">
                       <i class="fad fa-download"></i> <span
                       class="d-none d-md-block pl-50"> Download ({{ issue.size|filesizeformat }})</span>
                     </a>
