--- a/read_comics/missing_issues/templates/missing_issues/issues_table.html
+++ b/read_comics/missing_issues/templates/missing_issues/issues_table.html
@@ -7,7 +7,7 @@
   {% for missing_issue in missing_issues %}
     {% ifchanged missing_issue.publisher_comicvine_id %}
       <tr class="publisher-row bg-primary bg-light">
-        <td>
+        <td class="pt-50 pb-50">
           <div class="btn-group" role="group">
             <button data-href="
 
@@ -20,16 +20,16 @@
                     title="Ignore"><i class="fad fa-times"></i></button>
           </div>
         </td>
-        <td class="pl-1"><a href="{{ missing_issue.publisher_comicvine_url }}"
+        <td class="pl-1 pt-50 pb-50"><a href="{{ missing_issue.publisher_comicvine_url }}"
                             target="_blank">{{ missing_issue.publisher_name }}</a></td>
         <td></td>
-        <td class="pl-1"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
+        <td class="pl-1 pt-50 pb-50"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
                                title="Copy">{{ missing_issue.publisher_space_path }}</span></td>
       </tr>
     {% endifchanged %}
     {% ifchanged missing_issue.volume_comicvine_id %}
       <tr class="volume-row bg-secondary bg-light">
-        <td>
+        <td class="pt-50 pb-50">
           <div class="btn-group" role="group" aria-label="Basic example">
             <button data-href="
 
@@ -43,16 +43,16 @@
                     title="Ignore"><i class="fad fa-times"></i></button>
           </div>
         </td>
-        <td class="pl-3"><a href="{{ missing_issue.volume_comicvine_url }}"
+        <td class="pl-3 pt-50 pb-50"><a href="{{ missing_issue.volume_comicvine_url }}"
                             target="_blank">{{ missing_issue.volume_name }} ({{ missing_issue.volume_start_year }})</a>
         </td>
         <td></td>
-        <td class="pl-3"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
+        <td class="pl-3 pt-50 pb-50"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
                                title="Copy">{{ missing_issue.volume_space_path }}</span></td>
       </tr>
     {% endifchanged %}
     <tr class="issue-row">
-      <td>
+      <td class="pt-50 pb-50">
         <div class="btn-group" role="group" aria-label="Basic example">
           <button data-href="
             {% if obj %}{% url urls.category_skip_issue category=category_key slug=obj.slug comicvine_id=missing_issue.comicvine_id %}{% else %}{% url urls.skip_issue missing_issue.comicvine_id %}{% endif %}?page={{ page_obj.number }}{% if q %}&q={{ q }}{% endif %}"
@@ -64,9 +64,9 @@
                   title="Ignore"><i class="fad fa-times"></i></button>
         </div>
       </td>
-      <td class="pl-5"><a href="{{ missing_issue.comicvine_url }}" target="_blank">{{ missing_issue }}</a></td>
+      <td class="pl-5 pt-50 pb-50"><a href="{{ missing_issue.comicvine_url }}" target="_blank">{{ missing_issue }}</a></td>
       <td>{{ missing_issue.cover_date }}</td>
-      <td class="pl-5"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
+      <td class="pl-5 pt-50 pb-50"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
                              title="Copy">{{ missing_issue.issue_space_path }}</span></td>
 
     </tr>
