feat(missing-issues): added missing issues count in page title

--- a/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
+++ b/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
@@ -4,6 +4,7 @@
 {% load static %}
 
 {% block title %}
+  ({{ paginator.object_list.count|intcomma }})
   {% if obj %}
     {{ obj }} missing issues
   {% else %}
